<resources>
    <string name="app_name">MyFirstAppInKotlin</string>
    <string name="login">Login:</string>
    <string name="password">Password:</string>
    <string name="save_data">Save data</string>
    <string name="get_data">Get data</string>
    <string name="greetings">Hi</string>
    <string name="server_URL">Server URL:</string>
    <string name="topic">Topic:</string>
    <string name="message">Message:</string>
    <string name="publish">Publish</string>
    <string name="subscribe">Subscribe</string>
    <string name="light_name">Light name:</string>
    <string name="put_light">Put light name here</string>
    <string name="put_topic">Put MQTT topic here</string>
</resources>